--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ main{
 }
 
 /* progress Bar */
-progress[value] {
+/* progress[value] {
 	appearance: none;
 	border: none;
 	width: 100%; height: 20px;
@@ -162,7 +162,7 @@ progress[value] {
 	color: royalblue;
 	position: relative;
 	margin: 0 0 1.5em; 
-}
+} */
 
 progress[value]::-webkit-progress-bar {
 	background-color: whiteSmoke;
