--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 body{
-    background-image: url(img/fond.png);
+    background-image: url("img/fond.png");
     max-width: 1024px;
     margin: 0 auto;
 }
