--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@
     font-weight: bold;
 }
 
+.bold1{
+    font-weight: bold;
+    color: #008cff;
+}
+
+
 body{
     background-image: url("img/fond.png");
     max-width: 1024px;
